
Changelog
=========

0.3.0 - (Unreleased)
--------------------

* Add meta info to setup.py
  [aclark]

0.2.0 - (2011-07-27)
--------------------

* Create var dirs if they do not exist
  [aclark]

* Include package data
  [aclark]

0.1.0 - (2011-07-27)
--------------------

* Initial release
  [aclark]