@@ -1,5 +1,7 @@
 [buildout]
-develop = .
+develop = 
+    .
+    src/my.package
 allow-hosts = *.python.org
 extensions = buildout.bootstrap
 extends = http://download.zope.org/bluebream/bluebream-1.0.cfg
@@ -9,8 +11,8 @@ versions = versions
 
 [bluebream]
 recipe = collective.recipe.bluebream
-
+eggs =
+    my.package 
 
 [versions]
-collective.recipe.bluebream = 0.2.0
 distribute = 0.6.19
